resolve TODO problems